# DisparityEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
CMake/: CMakeConfigDirectory.cmake  CMakeConfigGlobal.cmake
Engine/: CMakeLists.txt
Engine/Documentation/: CMakeLists.txt  Coding Standard.md
Engine/Runtime/: CMakeLists.txt
Engine/Runtime/Header/Core/: Exception.hpp  Renderer.hpp
Engine/Runtime/Header/Core/DSTL/Collection/: TVector.hpp
Engine/Runtime/Header/Core/DSTL/Collection/Impl/: TVector.inl
Engine/Runtime/Header/Core/DSTL/Collection/Vector/: TVector.hpp  TVector.inl
Engine/Runtime/Header/Core/DSTL/Iterator/: TArrayIterator.hpp  TNormalIterator.hpp
Engine/Runtime/Header/Core/DSTL/Memory/: TAllocator.hpp
Engine/Runtime/Header/Core/DSTL/Trait/: TAllocationTrait.hpp  TIteratorTrait.hpp  TPODTrait.hpp  TPlainOldData.hpp
Engine/Runtime/Header/Platform/Configuration/: Compiler.hh  Configuration.hh  Type.hh
Engine/Runtime/Source/: CMakeLists.txt  Exception.cpp  Renderer.cpp  main.cpp
Engine/Test/: CMakeLists.txt
Engine/Test/SDL/: CMakeLists.txt
Engine/Test/Test/: UnitTestTest.cpp
Engine/UnitTest/: CMakeLists.txt
Engine/UnitTest/Runtime/: CMakeLists.txt
Engine/UnitTest/Runtime/Core/DSTL/Collection/: UnitTestTVector.cpp
Engine/UnitTest/Runtime/Core/DSTL/Trait/: UnitTestTPODTrait.cpp
Engine/UnitTest/SDL/: UnitTestSDL.cpp
Engine/UnitTest/SandBox/: CMakeLists.txt  UnitTestTest.cpp
Lib/Debug/: libGLEWd.so.2.1.0  libSDL2-2.0d.so.0  libSDL2-2.0d.so.0.7.0
